<resources>
    <string name="app_name">Lux Android App</string>
    <string name="action_settings">Definições</string>
    <string name="start_updates">Iniciar experiência</string>
    <string name="stop_updates">Concluir experiência</string>
    <string name="btn_show_map">Mostrar Mapa</string>
    <string name="btn_show_route">Mostrar Rota</string>
    <string name="btn_show_areas">Mostrar áreas de luz</string>
    <string name="btn_close">Menu</string>
    <string name="btn_send">Enviar</string>
    <string name="login_form">Faça login</string>
    <string name="username">Nome</string>
    <string name="password">Password</string>
    <string name="login">Entrar</string>
    <string name="success">Successo</string>
    <string name="register">Registar</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email (opcional)</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_register">Registo</string>
    <string name="log">Já tenho conta</string>
    <string name="protocolo_de_rua">\"O quão iluminada é esta rua?\"</string>
    <string name="protocolo_de_passadeira">\"Esta passadeira é visível o suficiente?\"</string>
    <string name="protocolo_de_parque">\"É seguro passear neste parque à noite?\"</string>
    <string name="proto_bus">\"Esta paragem de autocarro é bem iluminada?\"</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="instMenu1">A Lux Android App tem como objetivo calcular e recolher o nível de iluminação do local onde se encontra.</string>
    <string name="instMenu12">E qual é o interesse em saber esta informação?</string>
    <string name="instMenu13">Esta app irá avaliar a qualidade da iluminação da sua cidade e os dados recolhidos irão, posteriormente, justificar a tomada de possíveis medidas para a sua segurança e comodidade!</string>
    <string name="instMenu3">Vamos começar!\nMas primeiro, o que quer textobrir?</string>
    <string name="instMenu2">Para tal, é necessário realizar as experiências num ambiente noturno\n</string>
    <string name="userimage">userImage</string>
    <string name="btn_parque">Experiência no Parque</string>
    <string name="btn_paragem">Experiência na Paragem</string>
    <string name="btn_passadeira">Experiência na Passadeira</string>
    <string name="btn_rua">Experiência na Rua</string>
    <string name="btn_iniciarParagem">Iniciar Experiência</string>
    <string name="btn_iniciarPassadeira">Iniciar Experiência</string>
    <string name="btn_iniciarParque">Iniciar Experiência</string>
    <string name="btn_iniciarRua">Iniciar Experiência</string>
    <string name="step3">passo3</string>
    <string name="street_step1_text">Antes de iniciar a experiência certifique-se de que se encontra na rua na qual pretende efetuar a medição.</string>
    <string name="street_step2_text">Durante a medição, deve segurar o telemóvel de modo a que a face frontal esteja voltada para cima, aproximadamente à altura do peito. \n\n Mantenha o sensor de luz (junto à câmera frontal) desobstruído.</string>
    <string name="street_step3_text">A medição inicia no momento em que carregar no botão \"Iniciar Experiência\" na página seguinte.</string>
    <string name="street_step3_text2">Após carregar, deve caminhar ao longo da rua, concluindo a experiência no final do trajeto pretendido.</string>
    <string name="street_step3_text3">Está preparado?</string>
    <string name="bs_step1_text">Antes de iniciar a experiência, deve certificar-se de que se encontra na paragem de autocarro na qual pretende efetuar a medição.</string>
    <string name="bs_step2_text">Coloque-se a cerca de 2 metros da paragem, no local onde será iniciada a medição.</string>
    <string name="bs_step3_text">Durante a medição, deve segurar o telemóvel de modo a que a face frontal esteja voltada para cima, aproximadamente à altura do peito. \n\n Mantenha o sensor de luz (junto à câmera frontal) desobstruído.</string>
    <string name="bs_step4_text">A medição inicia no momento em que carregar no botão \"Iniciar Experiência\" na página seguinte.</string>
    <string name="bs_step4_text2">Após carregar, deve caminhar ao longo do perímetro da paragem, efetuando uma volta a esta.</string>
    <string name="bs_step4_text3">Está preparado?</string>
    <string name="park_step1_text">Antes de iniciar a experiência, deve certificar-se de que se encontra no parque no qual pretende efetuar a medição.</string>
    <string name="park_step2_text">Dirija-se a um ponto inicial do percurso. Esse será o local onde a iluminação será testada.</string>
    <string name="park_step3_text">Durante a medição, deve segurar o telemóvel de modo a que a face frontal esteja voltada para cima, aproximadamente à altura do peito. \n\n Mantenha o sensor de luz (junto à câmera frontal) desobstruído.</string>
    <string name="park_step4_text">A medição inicia no momento em que carregar no botão \"Iniciar Experiência\" na página seguinte.</string>
    <string name="park_step4_text2">Após carregar, deve caminhar ao longo do percurso, concluindo a experiência quando este acabar.</string>
    <string name="park_step4_text3">Está preparado?</string>
    <string name="zc_step1_text">Antes de iniciar a experiência, certifique-se de que se encontra a cerca de 3 metros da passadeira na qual pretende efetuar a medição.</string>
    <string name="zc_step2_text">Durante a medição, deve segurar o telemóvel de modo a que a face frontal esteja voltada para cima, aproximadamente à altura do peito. \n\n Mantenha o sensor de luz (junto à câmera frontal) desobstruído.</string>
    <string name="zc_step3_text">A medição inicia no momento em que carregar no botão \"Iniciar Experiência\" na página seguinte.</string>
    <string name="zc_step3_text2">Após carregar, deve atravessar a passadeira, concluindo a experiência a 3 metros do final da mesma.</string>
    <string name="zc_step3_text3">Está preparado?</string>
    <string name="rank_text">Tendo em conta o nível médio de iluminação da sua experiência, esta encontra-se no seguinte Rank, em relação a todas as experiências realizadas até agora:</string>
    <string name="rank">Rank:</string>
    <string name="quality_text">A qualidade de iluminação do local em que se encontra, em termos de visibilidade, é:</string>
    <string name="dotdotdot">…</string>
    <string name="experiment_notes">Nota: É necessário ativar a localização e a conexão à Internet, no dispositivo.\n\nA aplicação terá de permanecer em primeiro plano durante a sua execução.</string>
    <string name="swipe_icon">swipe icon</string>
    <string name="park_main_text">\n\n✷ Um parque bem iluminado é fundamental para a sua segurança!   \n\n\t ✷ A recolha de dados sobre a intensidade da luz permite ajudar a avaliar e posteriormente agir para melhorar a iluminação no local onde se encontra.   \n\n\t ✷ A intensidade da luz é medida através do sensor de luz do seu dispositivo.   \n\n\t ✷ O sensor deverá estar localizado junto à câmera frontal.   \n\n\t ✷ Ao continuar para a página seguinte, poderá familiarizar-se com as instruções para realizar a experiência.</string>
    <string name="bs_main_text">\n\n✷ A proximidade às estradas faz das paragens de autocarros locais propensos a acidentes!   \n\n\t ✷ A recolha de dados sobre a intensidade da luz permite ajudar a avaliar e posteriormente agir para melhorar a iluminação no local onde se encontra.   \n\n\t ✷ A intensidade da luz é medida através do sensor de luz do seu dispositivo.   \n\n\t ✷ O sensor deverá estar localizado junto à câmera frontal.   \n\n\t ✷ Ao continuar para a página seguinte, poderá familiarizar-se com as instruções para realizar a experiência.</string>
    <string name="zc_main_text">\n\n✷ É vital garantir a boa iluminação em torno de uma passadeira!   \n\n\t ✷ A recolha de dados sobre a intensidade da luz permite ajudar a avaliar e posteriormente agir para melhorar a iluminação no local onde se encontra.   \n\n\t ✷ A intensidade da luz é medida através do sensor de luz do seu dispositivo.   \n\n\t ✷ O sensor deverá estar localizado junto à câmera frontal.   \n\n\t ✷ Ao continuar para a página seguinte, poderá familiarizar-se com as instruções para realizar a experiência.</string>
    <string name="street_main_text">\n\n✷ Para melhorar a comodidade e segurança durante um passeio nocturno, é fundamental garantir a boa iluminação das ruas onde circula!   \n\n\t ✷ A recolha de dados sobre a intensidade da luz permite ajudar a avaliar e posteriormente agir para melhorar a iluminação no local onde se encontra.   \n\n\t ✷ A intensidade da luz é medida através do sensor de luz do seu dispositivo.   \n\n\t ✷ O sensor deverá estar localizado junto à câmera frontal.   \n\n\t ✷ Ao continuar para a página seguinte, poderá familiarizar-se com as instruções para realizar a experiência.</string>


</resources>
