<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".Activities.MenuActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="109dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:background="@mipmap/lux_icon"
        android:contentDescription="@string/userimage"
        android:cropToPadding="false" />

    <TextView
        android:id="@+id/hi"
        android:layout_width="143dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/bem_vindo"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/instMenu1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/instMenu1"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/instMenu12"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/instMenu12"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instMenu13"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/instMenu13"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/instMenu3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Pronto para começar?"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_begin"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vamos a isto!" />


</LinearLayout>