<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/passo3"
        android:layout_width="403dp"
        android:layout_height="289dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/step3"
        android:src="@drawable/passo_3_new"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />
    <TextView
        android:id="@+id/editText"
        android:layout_width="340dp"
        android:layout_height="123dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/street_step2_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passo3" />

    <ImageView
        android:id="@+id/swipe2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        app:srcCompat="@drawable/ic_swipe"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/swipe_icon"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>